fix: remove extra margin in .mat-table-container

--- a/src/app/pages/mapping/mapping.component.css
+++ b/src/app/pages/mapping/mapping.component.css
@@ -26,7 +26,6 @@
 }
 
 .mat-table-container {
-  margin: 20px;
   overflow-x: auto;
 }
 
